// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input it works default 1`] = `
.c1 {
  background-clip: padding-box;
  background-color: #ffffff;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: #333333;
  display: block;
  font-family: inherit;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  height: 48px;
  outline: none;
  padding: 16px 16px;
  text-align: left;
  -webkit-transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  width: 100%;
  background-position: top 12px right 12px;
  background-size: 24px 24px;
  background-repeat: no-repeat;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgZW5hYmxlLWJhY2tncm91bmQ9Im5ldyAwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiMxMDdCMDAiIGQ9Ik04LjggMTUuOWwtNC4yLTQuMi0xLjQgMS40IDUuNiA1LjYgMTItMTItMS40LTEuNC0xMC42IDEwLjZ6Ii8+PC9zdmc+');
}

.c1,
.c1:hover,
.c1:focus,
.c1:active {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  outline: none;
}

.c1:hover {
  border-color: #333333;
}

.c1:focus {
  border-color: #0069a7;
  box-shadow: 0 0 5px 0 #0069a7;
}

.c1::-ms-expand {
  background-color: transparent;
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1::-moz-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1:-ms-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1::placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1:disabled,
.c1[readonly] {
  background-image: none;
  background-color: #f2f2f2;
  border-color: #cccccc;
  cursor: not-allowed;
  opacity: 1;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::-webkit-input-placeholder,
.c1[readonly]::-webkit-input-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::-moz-placeholder,
.c1[readonly]::-moz-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled:-ms-input-placeholder,
.c1[readonly]:-ms-input-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::placeholder,
.c1[readonly]::placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled:hover,
.c1[readonly]:hover {
  border-color: #cccccc;
  box-shadow: none;
}

.c1:focus {
  font-weight: 400;
}

.c1:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c1:focus::-moz-placeholder {
  opacity: 1;
}

.c1:focus:-ms-input-placeholder {
  opacity: 1;
}

.c1:focus::placeholder {
  opacity: 1;
}

.c1,
.c1:hover {
  border-color: #118000;
}

.c0 {
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <input
    class="c1"
    value=""
  />
</div>
`;

exports[`Input it works with status error 1`] = `
.c1 {
  background-clip: padding-box;
  background-color: #ffffff;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: #333333;
  display: block;
  font-family: inherit;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  height: 48px;
  outline: none;
  padding: 16px 16px;
  text-align: left;
  -webkit-transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  width: 100%;
  background-position: top 12px right 12px;
  background-size: 24px 24px;
  background-repeat: no-repeat;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgZW5hYmxlLWJhY2tncm91bmQ9Im5ldyAwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiNBOTAwMTYiIGQ9Ik0yMSAyMmgtMThjLS4zIDAtLjctLjItLjktLjUtLjItLjMtLjItLjcgMC0xbDktMThjLjMtLjcgMS40LS43IDEuOCAwbDkgMThjLjIuMy4xLjcgMCAxLS4yLjMtLjYuNS0uOS41em0tMTYuNC0yaDE0LjhsLTcuNC0xNC44LTcuNCAxNC44ek0xMSAxMGgydjZoLTJ6Ii8+PGNpcmNsZSBmaWxsPSIjQTkwMDE2IiBjeD0iMTIiIGN5PSIxOCIgcj0iMS4zIi8+PC9zdmc+');
}

.c1,
.c1:hover,
.c1:focus,
.c1:active {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  outline: none;
}

.c1:hover {
  border-color: #333333;
}

.c1:focus {
  border-color: #0069a7;
  box-shadow: 0 0 5px 0 #0069a7;
}

.c1::-ms-expand {
  background-color: transparent;
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1::-moz-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1:-ms-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1::placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1:disabled,
.c1[readonly] {
  background-image: none;
  background-color: #f2f2f2;
  border-color: #cccccc;
  cursor: not-allowed;
  opacity: 1;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::-webkit-input-placeholder,
.c1[readonly]::-webkit-input-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::-moz-placeholder,
.c1[readonly]::-moz-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled:-ms-input-placeholder,
.c1[readonly]:-ms-input-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::placeholder,
.c1[readonly]::placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled:hover,
.c1[readonly]:hover {
  border-color: #cccccc;
  box-shadow: none;
}

.c1:focus {
  font-weight: 400;
}

.c1:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c1:focus::-moz-placeholder {
  opacity: 1;
}

.c1:focus:-ms-input-placeholder {
  opacity: 1;
}

.c1:focus::placeholder {
  opacity: 1;
}

.c1,
.c1:hover {
  border-color: #bf0019;
}

.c0 {
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <input
    class="c1"
    value=""
  />
</div>
`;

exports[`Input it works with status success 1`] = `
.c1 {
  background-clip: padding-box;
  background-color: #ffffff;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: #333333;
  display: block;
  font-family: inherit;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  height: 48px;
  outline: none;
  padding: 16px 16px;
  text-align: left;
  -webkit-transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  width: 100%;
  background-position: top 12px right 12px;
  background-size: 24px 24px;
  background-repeat: no-repeat;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgZW5hYmxlLWJhY2tncm91bmQ9Im5ldyAwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiMxMDdCMDAiIGQ9Ik04LjggMTUuOWwtNC4yLTQuMi0xLjQgMS40IDUuNiA1LjYgMTItMTItMS40LTEuNC0xMC42IDEwLjZ6Ii8+PC9zdmc+');
}

.c1,
.c1:hover,
.c1:focus,
.c1:active {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  outline: none;
}

.c1:hover {
  border-color: #333333;
}

.c1:focus {
  border-color: #0069a7;
  box-shadow: 0 0 5px 0 #0069a7;
}

.c1::-ms-expand {
  background-color: transparent;
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1::-moz-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1:-ms-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1::placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c1:disabled,
.c1[readonly] {
  background-image: none;
  background-color: #f2f2f2;
  border-color: #cccccc;
  cursor: not-allowed;
  opacity: 1;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::-webkit-input-placeholder,
.c1[readonly]::-webkit-input-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::-moz-placeholder,
.c1[readonly]::-moz-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled:-ms-input-placeholder,
.c1[readonly]:-ms-input-placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled::placeholder,
.c1[readonly]::placeholder {
  color: #999999;
}

.c1:disabled,
.c1[readonly],
.c1:disabled:hover,
.c1[readonly]:hover {
  border-color: #cccccc;
  box-shadow: none;
}

.c1:focus {
  font-weight: 400;
}

.c1:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c1:focus::-moz-placeholder {
  opacity: 1;
}

.c1:focus:-ms-input-placeholder {
  opacity: 1;
}

.c1:focus::placeholder {
  opacity: 1;
}

.c1,
.c1:hover {
  border-color: #118000;
}

.c0 {
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <input
    class="c1"
    value=""
  />
</div>
`;
